--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 <body>
 
 
-  <script src="./Js/18.原型调用问题.js"></script>
+  <script src="./Js/6.手写call,bind,apple.js"></script>
 </body>
 
 </html>
